# galvanometer

./: .gitignore  Cargo.toml  README.md  fit_data.py
device/: Cargo.toml
device/.cargo/: config
device/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
