[package]
name = "galvonometer"
version = "0.1.0"
edition = "2021"

# optimize for size
[profile.release]
opt-level = "s"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103"] }
cortex-m = "0.7"
cortex-m-rt = "0.7.1"
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
panic-semihosting = "0.6"
usbd-serial = "0.1.1"
usb-device = "0.2.9"
