[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
serialport = "4.2.0"
coingecko = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.68"
serde_json = "1.0.91"
